# gemma_270m_sft_gr

./: .gitignore  .pre-commit-config.yaml  README.md  env_setup.sh  example.py  pyproject.toml  test.py
cli/: datasets.py  get_data.py  share.py  train.py
datasets/: truthful_qa_greek.parquet
src/gemma_finetune/: data_import.py
