[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_finetune"]

[project]
name = "gemma-270m-sft-gr"
version = "0.1.0"
description = "Finetuned Gemma 270M with greek data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==4.0.0",
    "polars>=1.33.0",
    "trl==0.19.1",
    "unsloth>=2025.7.2 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "pre-commit>=4.3.0",
]
